--- a/public/css/header.css
+++ b/public/css/header.css
@@ -118,3 +118,74 @@ a:visited {
     background-color: #000 !important;
     color: #fff;
 }
+
+/* loading */
+.hidden {
+    display: none !important;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(221, 221, 221, 0.8);
+    top: 0;
+    left: 0;
+    z-index: 1099;
+}
+  
+  .loader {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #000;
+    font-size: 10px;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  .loader h2 {
+    display: inline-block;
+    margin-right: 2em;
+    font-size: 30px;
+}
+.dots,
+.dots:before,
+.dots:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.dots {
+  color: #4A8AC3;
+  display: inline-block;
+  font-size: 10px;
+  position: relative;
+  top: -2.5em;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.dots:before,
+.dots:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.dots:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.dots:after {
+  left: 3.5em;
+}
