--- a/resources/sass/partials/_all.scss
+++ b/resources/sass/partials/_all.scss
@@ -4,8 +4,6 @@
 @import 'button';
 @import 'card';
 @import 'datatable';
-@import 'listBranch';
-@import 'listRoster';
-@import 'createRoster';
+@import 'login';
 @import 'users';
 @import 'footer';
