--- a/resources/sass/modules/_typography.scss
+++ b/resources/sass/modules/_typography.scss
@@ -4,6 +4,7 @@
 $ff-roboto: 'Roboto', sans-serif;
 $ff-charm: 'Charm', sans-serif;
 
+$fw-s: 300;
 $fw-n: 400;
 $fw-m: 500;
 $fw-b: 600;
@@ -12,4 +13,5 @@ $fs-s: 0.8rem;
 $fs-n: 0.9rem;
 $fs-m: 1rem;
 $fs-l: 1.2rem;
-$fs-el: 1.5rem;
+$fs-xl: 1.5rem;
+$fs-xxl: 1.8rem;
