--- a/resources/sass/partials/_all.scss
+++ b/resources/sass/partials/_all.scss
@@ -4,6 +4,7 @@
 @import 'button';
 @import 'card';
 @import 'datatable';
+@import 'rosterTable';
 @import 'login';
 @import 'users';
 @import 'footer';
