--- a/resources/sass/partials/_card.scss
+++ b/resources/sass/partials/_card.scss
@@ -15,10 +15,19 @@
                 height: 1.5rem;
                 width: auto;
             }
+
+            @include media(mobile--sm, mobile) {
+                margin-bottom: 0.5rem;
+                align-self: flex-start;
+            }
         }
         &__action {
             @include flex($jc: flex-end);
             flex: 1;
+        }
+
+        @include media(mobile--sm, mobile) {
+            flex-direction: column;
         }
     }
     &-text {
@@ -32,7 +41,7 @@
         border-bottom: 1px solid $light-gray;
 
         .btn {
-            width: 8rem;
+            min-width: 8rem;
         }
     }
     &-body {
