--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -272,7 +272,7 @@
                 z-index: 5;
                 border-top-left-radius: 0.25rem;
                 border-top-right-radius: 0.25rem;
-                background: url("../image/city.jpg");
+                background: url("~/image/city.jpg");
                 filter: grayscale(80%);
                 background-size: cover;
                 opacity: .2;
