Fix library js, css

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 @import '../../node_modules/datatables.net-responsive-dt/css/responsive.dataTables';
 @import '../../node_modules/toastr/build/toastr';
 @import '../../node_modules/@fortawesome/fontawesome-free/css/all';
+@import '../../node_modules/select2/src/scss/core';
 @import 'modules/all';
 @import 'vendor/normalize';
 @import 'partials/all';
